--- a/Source/Source.csproj
+++ b/Source/Source.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\Reponse\Color\" />
     <Folder Include="Resources\Video\" />
   </ItemGroup>
 
